--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
     </script>
   </head>
   <body>
-    <center><h1> Please view this in fullscreen. </h1></center>
     <div class="webgl-content">
       <div id="gameContainer" style="width: 960px; height: 600px"></div>
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">PhySICKS RADD</div>
+        <div class="title">Physics Demonstration</div>
       </div>
     </div>
+    <center><h1> Please view this in fullscreen. </h1></center>
+
   </body>
 </html>
