--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Physics Demonstration</title>
+    <title>Unity WebGL Player | PhySICKS RADD</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>  
@@ -18,10 +18,8 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">Physics Demonstration</div>
+        <div class="title">PhySICKS RADD</div>
       </div>
     </div>
-    <center><h1> Please view this in fullscreen. </h1></center>
-
   </body>
 </html>
